Refactored project's structure